--- a/soulo/src/app/admin/edit-theme/edit-theme.component.html
+++ b/soulo/src/app/admin/edit-theme/edit-theme.component.html
@@ -1,54 +1,40 @@
 <body>
-    
-<nav class="navbar fixed-top navbar navbar-expand-lg " >
-  <!-- Container wrapper -->
-  <div class="container-fluid">
-    <!-- Toggle button -->
-    <button
-      class="navbar-toggler"
-      type="button"
-     
-      aria-controls="navbarRightAlignExample"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
-
-    <!-- Collapsible wrapper -->
-    <div
-      class="collapse navbar-collapse"
-      id="navbarRightAlignExample"
-      mdbCollapse
-     
-    >
-      <!-- Left links -->
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-            >Disabled</a
-          >
-        </li>
+  <nav class="navbar fixed-top navbar-expand-lg  navbar-light" style="background-color: #1D2226">
+    <a href="#" class="navbar-brand custom-nav" style="color: #E9E9EA;">PROFILER</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="color: #E9E9EA;">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0" >
+       
+      
       </ul>
-      <!-- Left links -->
     </div>
-    <!-- Collapsible wrapper -->
-  </div>
-  <!-- Container wrapper -->
-</nav>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0" >
+        <li class="nav-item active" >
+          <a style="color: #E9E9EA;" class="nav-link" href="#">Edit Profile </a>
+        </li>
+        <li class="nav-item">
+          <a style="color: #E9E9EA;" class="nav-link" href="#">Theme Edit</a>
+        </li>
+        <li class="nav-item">
+            <a style="color: #E9E9EA;" class="nav-link" href="#">Log out</a>
+          </li>
+      </ul>
+ 
+</nav>    
+
     <div class="row">
-        
+      
         <div class="column1">
+          <br>
+          <br>
+          <br>
              <iframe [src]="transform(location)" style="border:none;overflow: hidden; "  seamless="seamless" title="W3Schools Free Online Web Tutorials" width="100%" height="100%" >   </iframe> 
         </div>
+       
         <div class="column2">
-            <p>edit-theme works!</p>
+          <br>
+          <br>
+          <br>
+            <p>Customize Theme</p>
             <form  #usersForm="ngForm" (ngSubmit)="postThemeEdit(usersForm.value)">
             <div *ngFor="let item of ThemeTemplate | keyvalue: keepOrder ">
                 <!-- <div>{{item.key}} </div> -->
@@ -57,10 +43,6 @@
                     <input type="text" [(ngModel)]="item.value" name="{{item.key}}" id="form12" class="form-control" value="{{item.value}}" />
                   
                   </div>
-
-                
-
-               
             </div>
                 <input type="submit" class="form-control">
             </form>
