--- a/soulo/src/app/auth/login/login.component.css
+++ b/soulo/src/app/auth/login/login.component.css
@@ -30,7 +30,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #1f53ef;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -39,9 +39,10 @@
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+ 
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background:#3d6cf8;
 }
 .form .message {
   margin: 15px 0 0;
@@ -60,6 +61,12 @@
   z-index: 1;
   max-width: 300px;
   margin: 0 auto;
+}
+.logo{
+  color:blue;
+ position: absolute;
+ padding-left: 130px;
+ padding-top: 80px;
 }
 .container:before, .container:after {
   content: "";
