--- a/soulo/src/app/auth/login/login.component.html
+++ b/soulo/src/app/auth/login/login.component.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+  <h3 class="logo">PROFILER</h3>
 <!-- partial:index.partial.html -->
 <div class="login-page">
   <div class="form">
@@ -16,10 +17,13 @@
       <button>create</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
+    
     <form [formGroup]="form" (submit)="submit()" class="login-form" >
+      <h4>Sign In</h4>
       <input formControlName="email" name="email" type="text" placeholder="username"/>
       <input formControlName="password" name="surname" type="password" placeholder="password"/>
       <button type="submit">login</button>
+      <p class="message">Not registered? <a href="#">Sign Up</a></p>
     </form>
   </div>
 </div>
